<resources>
    <string name="app_name">Get A Meal</string>
    <string name="nama_makanan">Nama Makanan</string>
    <string name="image_food">Image food</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="description">Deskripsi</string>
    <string name="profile">Profile</string>
    <string name="detail_image">detail image</string>
    <string name="dummy_desc">Lagi cari ide resep sayur yang praktis dan enak? Bikin oseng kangkung bawang putih aja, yuk! Bahan-bahan dan bumbunya sederhana dengan cara membuatnya yang juga mudah. Resep oseng kangkung bumbu bawang putih sederhana ini enak disajikan dengan berbagai variasi lauk. Misalnya ayam kecap, tumis daging cincang tahu, atau cumi saus padang.</string>
    <string name="dummy_recipe">140g mie telur kering, rebus setengah matang, tiriskan,\n 6 batang sawi hijau, potong 3 cm,\n 2 butir telur ayam, \n5 butir bakso sapi, iris,\n 2 sdm Bango Kecap Manis Less Sugar,\n 1 sdm Royco Saus Tiram,\n 1 sdt Royco Kaldu Ayam,\n 1 batang daun bawang, potong 2 cm,\n 2 batang seledri, iris kasar,\n 100ml air,\n 3 sdm minyak, untuk menumis</string>
    <string name="recipe">Recipe:</string>
    <string name="procedure">Procedure:</string>
    <string name="dummy_procedure">Bumbu mie goreng nyemek: Haluskan semua bahan bumbu. Sisihkan.\n Panaskan minyak, tumis bumbu halus hingga harum. Tambahkan bakso sapi, aduk rata.\n Sisihkan bumbu beserta bakso ke pinggir wajan. Masukkan telur, buat orak-arik.\n Masukkan sawi, Royco Saus Tiram, Royco Kaldu Ayam, dan mie, aduk rata.\n Tambahkan Bango Kecap Manis Less Sugar dan daun bawang, aduk hingga tercampur rata.\n Tuang air dan seledri, aduk rata dan masak sebentar hingga meresap. Angkat.\n Sajikan mie goreng nyemek bersama bahan pelengkap.</string>
    <string name="name">Ahmad Taufiq Nur Rohman</string>
    <string name="email">afiq20030602@gmail.com</string>
    <string name="md_49">MD-49</string>
    <string name="share_makanan_ini">Share Makanan Ini</string>
    <string name="kembali">Kembali</string>
    <string name="get_a_meal">Get A Meal</string>
    <string-array name="data_name">
        <item>Mie Goreng Nyemek</item>
        <item>Oseng Kangkung</item>
        <item>Ikan Patin Bumbu Kuning</item>
        <item>Ayam Goreng Laos</item>
        <item>Sayur Lodeh Simple</item>
        <item>Beef Steak Saus Lada Hitam</item>
        <item>Udang Saus Padang</item>
        <item>Ayam Bakar</item>
        <item>Nasi Goreng Rawon</item>
        <item>Ikan Bakar Makassar</item>
        <item>Ikan Tongkol Balado</item>
        <item>Mie Ayam Rica-Rica</item>
    </string-array>
    <string-array name="data_description" >
        <item>Penyuka mie nyemek atau mie goreng wajib banget coba resep ini. Hidangan mie yang dipopulerkan dari Yogyakarta ini punya banyak penggemar karena tekstur kuahnya yang kental dan kaya rasa. Masakan ini juga memuaskan pencinta mie rebus yang ingin menikmati cita rasa mie goreng namun tetap bisa menikmati kuahnya.Mie goreng nyemek ini bukan cuma enak disantap sebagai menu makan malam, tetapi juga makan siang atau sarapan. Selain mie telur kering, kamu juga bisa menggunakan jenis mie lain seperti mie telur segar, mie kuning, atau kwetiau.</item>
        <item>Lagi cari ide resep sayur yang praktis dan enak? Bikin oseng kangkung bawang putih aja, yuk! Bahan-bahan dan bumbunya  sederhana dengan cara membuatnya yang juga mudah. Resep oseng kangkung bumbu bawang putih sederhana ini enak disajikan dengan berbagai variasi lauk. Misalnya ayam kecap, tumis daging cincang tahu, atau cumi saus padang.</item>
        <item>Bosan dengan menu yang itu-itu saja? Coba resep ikan patin bumbu kuning ini, yuk! Cocok banget dijadikan menu untuk memenuhi selera mereka yang tak suka dengan hidangan laut. Sebagai temannya, masakan ini cocok banget kamu sajikan barengan sayuran tumis dengan orek tempe, bakwan sayur, dan tentunya tambahan sambal.</item>
        <item>Ciri-ciri ayam goreng laos enak adalah cita rasa bumbu yang meresap dengan bumbu ungkep yang garing berwarna cokelat keemasan. Lewat artikel ini, Masak Apa Hari Ini ingin berbagi resep ayam goreng laos atau yang lebih populer dengan sebutan ayam goreng lengkuas yang seenak rumah makan. Selain lengkuas, bumbu rimpang ini juga dikenal dengan sebutan laos di pulau Jawa. Teksturnya berserat dengan rasa yang khas sehingga cocok disantap setelah digoreng. Bumbu ini enak digoreng dan disajikan seperti halnya serundeng kelapa.</item>
        <item>Selain resep sayur sop, sayur asem, dan sayur capcay, resep sayur lodeh merupakan salah satu masakan yang terdiri dari beberapa jenis sayuran yang punya banyak variasi. Dapat diolah dari berbagai sumber protein misalnya daging ayam, daging sapi, atau ikan asap. Kali ini, Masak Apa Hari Ini ingin mengajak kamu untuk mencoba resep sayur lodeh simple kuah santan yang mudah dibuat dengan bahan yang ekonomis. Tak harus sesuai resep, kamu bisa menjadikan masakan sayur lodeh sebagai ide menu untuk menghabiskan sisa sayuran di kulkas. Misalnya wortel, buncis, terung hijau, atau jagung manis.</item>
        <item>Inilah menu beef steak yang selalu jadi favorit di restoran. Daging has dalam dipanggang lalu dilumuri saus black pepper. Masak untuk weekend, yuk!</item>
        <item>Resep udang saus padang restoran seafood yang simple dan gampang bikinnya. Cocok banget disajikan bareng ikan bakar, tumis sayuran, dan tahu isi.</item>
        <item>Yuk, coba resep ayam bakar rumahan yang enak ini! Lengkapi dengan pendamping yang lezat di atas meja makan. Selamat mencoba!</item>
        <item>Penasaran mengulik resep nasi goreng yang berbeda? Coba dulu nasi goreng rawon berikut! Praktis dengan rasa pedas nikmat bikin nagih!</item>
        <item>Ikan Bakar Makassar adalah salah satu hidangan seafood Nusantara yang banyak digemari pencinta kuliner. Yuk, ikuti cara membuatnya!</item>
        <item>Masak ikan tongkol balado untuk makan siang, yuk! Sebagai temannya, kamu bisa menyajikan tumis sayuran atau oseng tahu tempe. Makin enak!</item>
        <item>Mie ayam rica rica adalah pilihan baru menikmati comfort food yang jadi kesukaan banyak orang. Yuk, sajikan di rumah dengan resep ini!</item>
    </string-array>
</resources>