<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".DetailView"
        android:padding="16dp" >

        <ImageView
            android:id="@+id/img_detail"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/detail_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/tv_data_received"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/nama_makanan"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/img_detail"
            app:layout_constraintStart_toStartOf="@+id/img_detail"
            app:layout_constraintTop_toBottomOf="@id/img_detail" />

        <TextView
            android:id="@+id/detail_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:justificationMode="inter_word"
            android:text="@string/dummy_desc"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/img_detail"
            app:layout_constraintStart_toStartOf="@+id/img_detail"
            app:layout_constraintTop_toBottomOf="@id/tv_data_received"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/recipe_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/recipe"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/img_detail"
            app:layout_constraintStart_toStartOf="@+id/img_detail"
            app:layout_constraintTop_toBottomOf="@id/detail_description" />

        <TextView
            android:id="@+id/detail_recipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:justificationMode="inter_word"
            android:text="@string/dummy_recipe"
            app:layout_constraintEnd_toEndOf="@+id/img_detail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recipe_label"
            android:textSize="16sp"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/procedure_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/procedure"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/img_detail"
            app:layout_constraintStart_toStartOf="@+id/img_detail"
            app:layout_constraintTop_toBottomOf="@id/detail_recipe" />

        <TextView
            android:id="@+id/detail_procedure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:justificationMode="inter_word"
            android:textSize="16sp"
            android:text="@string/dummy_procedure"
            app:layout_constraintEnd_toEndOf="@+id/img_detail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/procedure_label"
            tools:targetApi="o" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>